fix: various marketplace flows and testbeds

--- a/frontend/src/app/features/admin/admin-amenities-page/admin-amenities-page.component.html
+++ b/frontend/src/app/features/admin/admin-amenities-page/admin-amenities-page.component.html
@@ -16,7 +16,7 @@
   <div class="loader w-100" *ngIf="isLoading"></div>
 
   <div class="no-posts-found" *ngIf="amenities?.length === 0 && !isLoading">
-    <i class="circle-icon fa-solid fa-magnifying-glass"></i>
+    <i class="fa-solid fa-magnifying-glass fa-4x"></i>
     {{ 'ADMIN-AMENITIES-PAGE.AMENITIES_NOT_FOUND' | translate }}
   </div>
 
