--- a/frontend/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
+++ b/frontend/src/app/features/amenities/amenities-reservations-page/amenities-reservations-page.component.html
@@ -13,7 +13,7 @@
           class="no-posts-found"
           *ngIf="amenities?.length === 0 && !isLoading"
         >
-          <i class="circle-icon fa-solid fa-magnifying-glass"></i>
+          <i class="fa-solid fa-magnifying-glass fa-4x"></i>
           {{ 'AMENITIES-RESERVATIONS-PAGE.AMENITIES_NOT_FOUND' | translate }}
         </div>
 
