--- a/frontend/src/app/features/feed/feed-page/feed-page.component.html
+++ b/frontend/src/app/features/feed/feed-page/feed-page.component.html
@@ -35,8 +35,8 @@
 
         <ng-template #noPostsFound>
           <div class="no-posts-found">
-            <i class="circle-icon fa-solid fa-magnifying-glass"></i>
-            <span i18n>Posts not found</span>
+            <i class="fa-solid fa-magnifying-glass fa-4x"></i>
+            <span i18n>{{ 'FEED-PAGE.POSTS_NOT_FOUND' | translate }}</span>
           </div>
         </ng-template>
       </div>
