--- a/frontend/src/app/features/information/information-page/information-page.component.html
+++ b/frontend/src/app/features/information/information-page/information-page.component.html
@@ -11,7 +11,7 @@
         </h2>
         <div *ngIf="contacts.length === 0; else contactTable">
           <div class="no-posts-found">
-            <i class="circle-icon fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-magnifying-glass fa-4x"></i>
             {{ 'INFORMATION-PAGE.INFORMATION_NOT_FOUND' | translate }}
           </div>
         </div>
