--- a/frontend/src/app/features/marketplace/marketplace-page/marketplace-page.component.html
+++ b/frontend/src/app/features/marketplace/marketplace-page/marketplace-page.component.html
@@ -20,7 +20,7 @@
           class="cool-static-container w-100"
         >
           <div class="no-posts-found">
-            <i class="circle-icon fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-magnifying-glass fa-4x"></i>
             {{ 'MARKETPLACE-PAGE.PRODUCTS_NOT_FOUND' | translate }}
           </div>
         </div>
@@ -45,6 +45,5 @@
       </div>
     </div>
   </div>
-
 </div>
 <app-wave-footer [theme]="'marketplace'"></app-wave-footer>
