--- a/frontend/src/app/features/service-providers/service-providers-reviews-and-posts/service-providers-reviews-and-posts.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-reviews-and-posts/service-providers-reviews-and-posts.component.html
@@ -66,7 +66,7 @@
 
         <ng-template #noReviewsFound>
           <div class="no-posts-found">
-            <i class="circle-icon fa-solid fa-magnifying-glass mb-3"></i>
+            <i class="fa-solid fa-magnifying-glass fa-4x"></i>
             {{
               'SERVICE-PROVIDERS-REVIEWS-AND-POSTS.REVIEWS_NOT_FOUND'
                 | translate
@@ -105,7 +105,7 @@
 
         <ng-template #noPostsFound>
           <div class="no-posts-found w-100">
-            <i class="circle-icon fa-solid fa-magnifying-glass mb-3"></i>
+            <i class="fa-solid fa-magnifying-glass fa-4x"></i>
             {{
               'SERVICE-PROVIDERS-REVIEWS-AND-POSTS.POSTS_NOT_FOUND' | translate
             }}
