--- a/frontend/src/assets/styles/postcard.css
+++ b/frontend/src/assets/styles/postcard.css
@@ -3,7 +3,7 @@
   padding: 20px;
   transform: translateY(-4px);
   border: 1px solid var(--bordercolor);
-  box-shadow: -3px 5px 0 0 var(--shadow);
+  box-shadow: -3px 5px 0 0 var(--bordercolor);
   background-color: var(--onbackground);
   color: var(--text);
   border-radius: var(--border-radius);
