--- a/frontend/src/app/features/calendar/calendar-events-column/calendar-events-column.component.html
+++ b/frontend/src/app/features/calendar/calendar-events-column/calendar-events-column.component.html
@@ -13,7 +13,7 @@
   <!-- Actual events -->
   <div id="actual-events" *ngIf="!isLoading">
     <div *ngIf="events.length === 0" class="no-posts-found">
-      <i class="circle-icon fa-solid fa-magnifying-glass"></i>
+      <i class="fa-solid fa-magnifying-glass fa-4x"></i>
       {{
         'CALENDAR-EVENTS-COLUMN.THERE_ARE_NO_EVENTS_FOR_THIS_DATE' | translate
       }}
