--- a/frontend/src/app/features/marketplace/marketplace-product-detail-page/marketplace-product-detail-page.component.html
+++ b/frontend/src/app/features/marketplace/marketplace-product-detail-page/marketplace-product-detail-page.component.html
@@ -284,7 +284,7 @@
                 </ng-template>
               </div>
 
-              <div class="f-c-c-c w-100" style="text-align: center">
+              <div class="f-c-c-c w-100 mt-3" style="text-align: center">
                 <app-paginator
                   [totalPages]="totalPages"
                   [currentPage]="page"
