--- a/frontend/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-page/service-providers-page.component.html
@@ -31,7 +31,7 @@
 <ng-template #noWorkersFound>
   <div class="cool-static-container m-b-20" style="word-wrap: break-word">
     <div class="no-posts-found">
-      <i class="circle-icon fa-solid fa-magnifying-glass"></i>
+      <i class="fa-solid fa-magnifying-glass fa-4x"></i>
       <span>{{ 'SERVICE-PROVIDERS-PAGE.COULD_NOT_FIND' | translate }}</span>
     </div>
   </div>
