--- a/frontend/src/assets/styles/calendarWidget.css
+++ b/frontend/src/assets/styles/calendarWidget.css
@@ -21,7 +21,7 @@
   border: 1px solid var(--bordercolor);
   border-radius: var(--border-radius);
   transform: translateY(-4px);
-  box-shadow: -3px 5px 0 0 var(--lighttext);
+  box-shadow: -3px 5px 0 0 var(--bordercolor);
 
   & header {
     display: flex;
