--- a/frontend/src/assets/styles/service.css
+++ b/frontend/src/assets/styles/service.css
@@ -8,7 +8,7 @@
   border-radius: var(--border-radius);
   transform: translateY(-4px);
   transition: all 0.3s ease-in-out;
-  box-shadow: 0 4px 0 0 var(--lighttext);
+  box-shadow: 0 4px 0 0 var(--bordercolor);
 
   & .card-header {
     margin: 0;
@@ -25,7 +25,7 @@
   & .card-body {
     position: relative;
     width: 100%;
-    border-bottom: 1px solid var(--lighttext);
+    border-bottom: 1px solid var(--bordercolor);
 
     &::before {
       content: '';
