--- a/frontend/src/app/features/service-providers/service-providers-preview/service-providers-preview.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-preview/service-providers-preview.component.html
@@ -29,7 +29,9 @@
               (click)="onProfessionClick($event, profession)"
               title="Click to filter by profession"
             >
-              {{ 'TAGS-FILTER-WIDGET.PROFESSIONS.' + profession.name }}
+              {{
+                'TAGS-FILTER-WIDGET.PROFESSIONS.' + profession.name | translate
+              }}
             </span>
           </ng-container>
         </div>
