--- a/frontend/src/app/features/service-providers/service-providers-edit-dialog/service-providers-edit-dialog.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-edit-dialog/service-providers-edit-dialog.component.html
@@ -187,7 +187,7 @@
 
         <button
           type="submit"
-          class="cool-button cool-small services-button on-bg font-weight-bolder mb-4 mt-3"
+          class="cool-button cool-small services-button on-bg mb-4 mt-3"
           style="width: 150px"
           [disabled]="editForm.invalid"
         >
