--- a/frontend/src/app/features/service-providers/service-providers-review-dialog/service-providers-review-dialog.component.html
+++ b/frontend/src/app/features/service-providers/service-providers-review-dialog/service-providers-review-dialog.component.html
@@ -3,7 +3,7 @@
   class="dialog"
   [ngClass]="{ 'show-dialog': reviewDialogVisible }"
 >
-  <div class="dialog-content services">
+  <div class="dialog-content onbg services">
     <div class="dialog-header">
       <div class="review-dialog-text">
         <h3 class="font-size-20 font-weight-bold c-services mb-3">
@@ -72,7 +72,7 @@
       </div>
       <button
         type="submit"
-        class="w-75 cool-button services-button pure filled-interesting square-radius font-size-14 font-weight-bold"
+        class="mt-3 cool-button services-button pure filled-interesting square-radius font-size-14 p-2"
         [disabled]="reviewForm.invalid"
       >
         {{ 'SERVICE-PROVIDERS-REVIEW-DIALOG.SUBMIT_REVIEW' | translate }}
