--- a/frontend/src/assets/styles/service.css
+++ b/frontend/src/assets/styles/service.css
@@ -95,6 +95,7 @@
   position: relative;
   transform: translateY(0);
   cursor: pointer;
+  box-shadow: 0 0 11px 0 var(--shadow);
 
   & svg {
     width: 85px;
@@ -181,7 +182,7 @@
 
   &:hover {
     transform: translateY(-5px);
-    box-shadow: -3px 5px 0 0 var(--profession);
+    box-shadow: -3px 5px 0 0 var(--profession), 0 0 11px 0 var(--shadow);
   }
 
   & .background-cover {
